style: articles index

--- a/articles/templates/articles/index.html
+++ b/articles/templates/articles/index.html
@@ -1,70 +1,87 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load humanize %}
 {% load django_bootstrap5 %}
 
 {% block content %}
-<div class="section-grid p-5">
-    <div>
-        <div class="row mt-3" style="width: 100%;">
-            <div class="d-flex justify-content-center m-2 p-3 d-flex" style="background-color:white">
-                <div class="card mx-2 col-lg-4">
-                    <img src="https://mblogthumb-phinf.pstatic.net/20110926_159/levas2021_1317026319398ibHFo_JPEG/72k_02_diada890j.jpg?type=w2"
-                        class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <p class="card-text">퉁퉁이 피규어1
-                        </p>
-                    </div>
-                </div>
-                <div class="card mx-2 col-lg-4">
-                    <img src="https://mblogthumb-phinf.pstatic.net/20110926_135/levas2021_1317026318586t44EJ_JPEG/72k_01_diada890j.jpg?type=w2"
-                        class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <p class="card-text">퉁퉁이 피규어2</p>
-                    </div>
-                </div>
+<div class="section-grid px-2 my-4">
+    <aside class="mt-3" style="overflow-y: scroll; height: calc(100vh - 60px);">
+        <h2 class="mb-3 mx-3" style="font-size: 14px; color: #8b95a1">오늘 많이본 상품</h2>
+        {% for product in products %}
+        <div class="card m-3" style="width:287px; border-radius: 15px; border: 0px;">
+            <div class="cart-head" style="width: 287px; height: 287px; border-radius: 15px 15px 0 0;">
+                <img src="{{product.product_image.url}}" class="card-img-top" alt="..."
+                    style="object-fit:cover; width: 100%; height: 100%; border-radius: 15px 15px 0 0;">
             </div>
-        </div>
-    </div>
-    <div>
-        {% for article in articles %}
-        <div class="user-wrap mt-3" style="width: 100%; height: 300px;">
-            <div class="user-image m-4 py-3">
-                <img style="height: 300px;" src="{{article.image.url}}" alt="">
-            </div>
-            <div class="user-text">
-                {% if article.review_image %}
-                <!-- title -->
-                <a href="{% url 'articles:detail' article.pk article.slug %}"><span
-                        class="fs-2 fw-bold text-white">{{article.title}}</span></a>
-                <!-- username/ create_at -->
-                <p class="fw-bold text-white">{{ article.user }}</p>
-                <p class="fw-bold text-white">{{ article.created_at }}</p>
-                {% else %}
-                <a href="{% url 'articles:detail' article.pk article.slug %}"><span
-                        class="fs-2 fw-bold text-white">{{article.title}}</span></a>
-                <!-- username/ create_at -->
-                <p class="fw-bold text-white">{{ article.user }}</p>
-                <p class="fw-bold text-white">{{ article.created_at }}</p>
-                {% endif %}
+            <div class="card-body">
+                <p class="m-0 text-muted" style="font-size: 14px;">{{ product.brand }}</p>
+                <h4 class="mb-1" style="font-size: 16px">{{ product.title }}</h4>
+                <p class="m-0" style="font-size: 18px; font-weight:700; color: #33c4f0;">
+                    {{ product.price|intcomma }}원</p>
+                <p class="m-0" style="color: #33c4f0;">★
+                    <span style="color: rgb(76, 76, 76)">{{ grade_avg.grade_avg__avg|floatformat }}</span>
+                </p>
             </div>
         </div>
         {% endfor %}
-    </div>
+    </aside>
+
     <div>
-        {% for article_hit in articles_hits %}
-        <div class="mt-3" style=" width: 100%;">
-            <div class="row m-2 p-3 d-flex justify-content-center" style="width:100%; background-color:white">
-                <div class="card m-2 col-lg-8" style="height: 150px;">
-                    <img style="height: 100%;" src="{{ article_hit.image.url }}" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <p class="card-text">{{article_hit.title}}
-                        </p>
-                    </div>
+        <section class="section-center mt-3" style="overflow-y: scroll; height: calc(100vh - 60px);">
+            <h2 class="mb-3 mx-3" style="font-size: 14px; color: #8b95a1">방금 올라온 인테리어 후기</h2>
+            <ul class="m-0 p-0">
+                {% for article in articles %}
+                <li style="list-style: none;">
+                    <a class="non_a" href="{% url 'articles:detail' article.pk article.slug %}">
+                        <div class="user-wrap mt-3" style="width: 100%; height: 300px;">
+                            <div class="user-text px-4 mt-0">
+                                {% if article.review_image %}
+                                <!-- title -->
+                                <div class="user-image mx-4 py-3">
+                                    <img class="contentcard" style="height: 400px; border-radius: 15px;"
+                                        src="http://economychosun.com/query/upload/255/20180616174128_tohfvsob.jpg"
+                                        alt="">
+                                </div>
+                                <a href="{% url 'articles:detail' article.pk article.slug %}" class="non_a"><span
+                                        class="fs-2 fw-bold">{{article.title}}</span></a>
+                                <!-- username/ create_at -->
+                                <p class="mb-0" style="font-weight: 200;">{{ article.user }}</p>
+                                <p class="mb-0" style="font-weight: 200;">{{ article.created_at }}</p>
+                                {% else %}
+                                <div class="contentcard d-flex align-items-center justify-content-center"
+                                    style="background-color: rgb(35, 35, 35); height: 200px; border-radius: 15px;">
+                                    <p class="non_a text-white" style="font-weight: 200;">이미지가 없습니다.</p>
+                                </div> <a href="{% url 'articles:detail' article.pk article.slug %}" class="non_a"><span
+                                        class="fs-2 fw-bold">{{article.title}}</span>
+                                </a>
+                                <!-- username/ create_at -->
+                                <p class="mb-0" style="font-weight: 200;">{{ article.user }}</p>
+                                <p class="mb-0" style="font-weight: 200;">{{ article.created_at }}</p>
+                                {% endif %}
+                            </div>
+                        </div>
+                    </a>
+                </li>
+            </ul>
+    </div>
+    {% endfor %}
+    </section>
+</div>
+<div>
+    {% for article_hit in articles_hits %}
+    <div class="mt-3" style=" width: 100%;">
+        <div class="row m-2 p-3 d-flex justify-content-center" style="width:100%; background-color:white">
+            <div class="card m-2 col-lg-8" style="height: 150px;">
+                <img style="height: 100%;" src="{{ article_hit.image }}" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text">{{article_hit.title}}
+                    </p>
                 </div>
             </div>
         </div>
-        {% endfor %}
     </div>
+    {% endfor %}
+</div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
