--- a/products/templates/products/create.html
+++ b/products/templates/products/create.html
@@ -1,82 +1,83 @@
 {% extends 'base.html' %}
 {% load django_bootstrap5 %}
 {% block content %}
-  <div class="container my-5" style="width: 700px">
-    <div class="p-4" style="box-shadow: 4px 12px 30px 6px rgb(0 0 0 / 9%); border-radius: 15px;">
-      <form class="p-4" action="" method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-        <div class=" d-flex justify-content-end">
-          <input class="btn" style="color: #33c4f0;" type="submit" value="작성완료">
-        </div>
-        <textarea rows="5" cols="10" class="form-control mt-3" style="border:0px" name="content" placeholder="리뷰를 입력해주세요."></textarea>
-        <div class="row mt-4">
-          <div class="star-left d-flex">
-            <div class="d-flex container align-items-center">
-              <p class="align-items-center fw-bold m-0">내구성</p>
-              <div class=" star-rating d-flex align-content-start mx-2">
-                <input type="radio" id="5-grade_durability" name="grade_durability" value="5"/>
-                <label for="5-grade_durability" class="star">★</label>
-                <input type=" radio" id="4-grade_durability" name="grade_durability" value="4"/>
-                <label for="4-grade_durability" class="star">★</label>
-                <input type="radio" id="3-grade_durability" name="grade_durability" value="3"/>
-                <label for="3-grade_durability" class="star">★</label>
-                <input type="radio" id="2-grade_durability" name="grade_durability" value="2"/>
-                <label for="2-grade_durability" class="star">★</label>
-                <input type="radio" id="1-grade_durability" name="grade_durability" value="1"/>
-                <label for="1-grade_durability" class="star">★</label>
-              </div>
-            </div>
-            <div class="d-flex container align-items-center">
-              <p class="align-items-center fw-bold m-0">디자인</p>
-              <div class=" star-rating d-flex align-content-start mx-2">
-                <input type="radio" id="5-grade_design" name="grade_design" value="5"/>
-                <label for="5-grade_design" class="star">★</label>
-                <input type=" radio" id="4-grade_design" name="grade_design" value="4"/>
-                <label for="4-grade_design" class="star">★</label>
-                <input type="radio" id="3-grade_design" name="grade_design" value="3"/>
-                <label for="3-grade_design" class="star">★</label>
-                <input type="radio" id="2-grade_design" name="grade_design" value="2"/>
-                <label for="2-grade_design" class="star">★</label>
-                <input type="radio" id="1-grade_design" name="grade_design" value="1"/>
-                <label for="1-grade_design" class="star">★</label>
-              </div>
+<div class="container my-5" style="width: 500px">
+  <div class="p-3" style="box-shadow: 4px 12px 30px 6px rgb(0 0 0 / 9%); border-radius: 15px;">
+    <form class="p-3" action="" method="POST" enctype="multipart/form-data">
+      {% csrf_token %}
+      <div class=" d-flex justify-content-end">
+        <input class="btn" style="color: #33c4f0;" type="submit" value="작성완료">
+      </div>
+      <textarea rows="5" cols="10" class="form-control mt-3" style="border:0px" name="content"
+        placeholder="리뷰를 입력해주세요."></textarea>
+      <div class="row mt-4">
+        <div class="star-left d-flex">
+          <div class="d-flex container align-items-center">
+            <p class="align-items-center fw-bold m-0">내구성</p>
+            <div class=" star-rating d-flex align-content-start mx-2">
+              <input type="radio" id="5-grade_durability" name="grade_durability" value="5" />
+              <label for="5-grade_durability" class="star">★</label>
+              <input type=" radio" id="4-grade_durability" name="grade_durability" value="4" />
+              <label for="4-grade_durability" class="star">★</label>
+              <input type="radio" id="3-grade_durability" name="grade_durability" value="3" />
+              <label for="3-grade_durability" class="star">★</label>
+              <input type="radio" id="2-grade_durability" name="grade_durability" value="2" />
+              <label for="2-grade_durability" class="star">★</label>
+              <input type="radio" id="1-grade_durability" name="grade_durability" value="1" />
+              <label for="1-grade_durability" class="star">★</label>
             </div>
           </div>
+          <div class="d-flex container align-items-center">
+            <p class="align-items-center fw-bold m-0">디자인</p>
+            <div class=" star-rating d-flex align-content-start mx-2">
+              <input type="radio" id="5-grade_design" name="grade_design" value="5" />
+              <label for="5-grade_design" class="star">★</label>
+              <input type=" radio" id="4-grade_design" name="grade_design" value="4" />
+              <label for="4-grade_design" class="star">★</label>
+              <input type="radio" id="3-grade_design" name="grade_design" value="3" />
+              <label for="3-grade_design" class="star">★</label>
+              <input type="radio" id="2-grade_design" name="grade_design" value="2" />
+              <label for="2-grade_design" class="star">★</label>
+              <input type="radio" id="1-grade_design" name="grade_design" value="1" />
+              <label for="1-grade_design" class="star">★</label>
+            </div>
+          </div>
+        </div>
 
-          <div class="star-right d-flex">
-            <div class="d-flex container align-items-center">
-              <p class="align-items-center fw-bold m-0">실용성</p>
-              <div class=" star-rating d-flex align-content-start mx-2">
-                <input type="radio" id="5-grade_practicality" name="grade_practicality" value="5"/>
-                <label for="5-grade_practicality" class="star">★</label>
-                <input type=" radio" id="4-grade_practicality" name="grade_practicality" value="4"/>
-                <label for="4-grade_practicality" class="star">★</label>
-                <input type="radio" id="3-grade_practicality" name="grade_practicality" value="3"/>
-                <label for="3-grade_practicality" class="star">★</label>
-                <input type="radio" id="2-grade_practicality" name="grade_practicality" value="2"/>
-                <label for="2-grade_practicality" class="star">★</label>
-                <input type="radio" id="1-grade_practicality" name="grade_practicality" value="1"/>
-                <label for="1-grade_practicality" class="star">★</label>
-              </div>
+        <div class="star-right d-flex">
+          <div class="d-flex container align-items-center">
+            <p class="align-items-center fw-bold m-0">실용성</p>
+            <div class=" star-rating d-flex align-content-start mx-2">
+              <input type="radio" id="5-grade_practicality" name="grade_practicality" value="5" />
+              <label for="5-grade_practicality" class="star">★</label>
+              <input type=" radio" id="4-grade_practicality" name="grade_practicality" value="4" />
+              <label for="4-grade_practicality" class="star">★</label>
+              <input type="radio" id="3-grade_practicality" name="grade_practicality" value="3" />
+              <label for="3-grade_practicality" class="star">★</label>
+              <input type="radio" id="2-grade_practicality" name="grade_practicality" value="2" />
+              <label for="2-grade_practicality" class="star">★</label>
+              <input type="radio" id="1-grade_practicality" name="grade_practicality" value="1" />
+              <label for="1-grade_practicality" class="star">★</label>
             </div>
-            <div class="d-flex container align-items-center">
-              <p class="align-items-center fw-bold m-0" style="width:41.52px">가격</p>
-              <div class=" star-rating d-flex align-content-start mx-2">
-                <input type="radio" id="5-grade_price" name="grade_price" value="5"/>
-                <label for="5-grade_price" class="star">★</label>
-                <input type=" radio" id="4-grade_price" name="grade_price" value="4"/>
-                <label for="4-grade_price" class="star">★</label>
-                <input type="radio" id="3-grade_price" name="grade_price" value="3"/>
-                <label for="3-grade_price" class="star">★</label>
-                <input type="radio" id="2-grade_price" name="grade_price" value="2"/>
-                <label for="2-grade_price" class="star">★</label>
-                <input type="radio" id="1-grade_price" name="grade_price" value="1"/>
-                <label for="1-grade_price" class="star">★</label>
-              </div>
+          </div>
+          <div class="d-flex container align-items-center">
+            <p class="align-items-center fw-bold m-0" style="width:41.52px">가격</p>
+            <div class=" star-rating d-flex align-content-start mx-2">
+              <input type="radio" id="5-grade_price" name="grade_price" value="5" />
+              <label for="5-grade_price" class="star">★</label>
+              <input type=" radio" id="4-grade_price" name="grade_price" value="4" />
+              <label for="4-grade_price" class="star">★</label>
+              <input type="radio" id="3-grade_price" name="grade_price" value="3" />
+              <label for="3-grade_price" class="star">★</label>
+              <input type="radio" id="2-grade_price" name="grade_price" value="2" />
+              <label for="2-grade_price" class="star">★</label>
+              <input type="radio" id="1-grade_price" name="grade_price" value="1" />
+              <label for="1-grade_price" class="star">★</label>
             </div>
           </div>
         </div>
-        <input class="mt-4" type="file" id="image" name="image" accept="image/png, image/jpeg, image/jpg">
-      </form>
-    </div>
+      </div>
+      <input class="mt-4" type="file" id="image" name="image" accept="image/png, image/jpeg, image/jpg">
+    </form>
+  </div>
   {% endblock %}
