style: articles detail font

--- a/articles/templates/articles/detail.html
+++ b/articles/templates/articles/detail.html
@@ -25,7 +25,7 @@
 
     <div class="my-3 p-4 container" style="background-color:white; width: 700px;">
         <p style="line-height: 32px; color: rgb(47, 52, 56); font-weight: 300;">
-        <p class="my-5">{{ article.content }}</p>
+        <p class="my-5" style="font-weight: 200;">{{ article.content }}</p>
         </p>
         {% if article.image %}
         <img src="{{ article.image.url }}" alt="{{ article.image }}" width=p00" height="300">
