--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
   </head>
 
   <body>
-    <nav>
+    {% comment %} <nav>
       <div class="header">
         <div class="header_main">
           <div class="nav_start">
@@ -31,7 +31,7 @@
           </div>
           <!-- <div class="nav_left"> -->
           <div class="nav_main">
-            <a clsss="nav_main_content" style="text-decoration: none; color:black;" href="{% url 'products:detail' 1 %}">
+            <a class="nav_main_content" style="text-decoration: none; color:black;" href="{% url 'products:detail' 1 %}">
               <span class=" nmc">
                 <b>상품후기</b>
               </span>
@@ -108,7 +108,101 @@
             </div>
           {% endif %}
         </div>
-      </nav>
+      </nav> {% endcomment %}
+
+      <nav class="navbar navbar-expand-lg">
+        <div class="container header_main">
+          <a class="main_logo" alt="오늘의집 로고" href="{% url 'articles:index' %}">
+            <img class="logo" src="{% static 'img/logo3.png' %}" alt="오늘의집 홈" width="100" height="30" viewbox="0 0 74 30">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item"  style="margin-top: 15px;">
+                <a class="nav_main_content" style="text-decoration: none; color:black; margin-top: 15px;" href="{% url 'products:detail' 1 %}">
+                  <span class="nmc">
+                    <b>상품후기</b>
+                  </span>
+                </a>
+              </li>
+              <li class="nav-item" style="margin-top: 15px;">
+                <a class="nav_main_content" style="text-decoration: none; color:black; margin-top: 15px;" href="{% url 'articles:article_all' %}">
+                  <span class="nmc" href="/index.html">
+                    <b>인테리어후기</b>
+                  </span>
+                </a>
+              </li>
+              <li class="nav-item center"  style="margin-top: 7px;">
+                <div class="nav_search">
+                  <form class="search_form" action="{% url 'articles:search' %}" method="GET">
+                    <input class="header_input p-3" placeholder="통합검색" name="kw">
+                    <input type="submit" style="display:none;">
+                  </form>
+                </div>
+              </li>
+              {% if request.user.is_authenticated %}
+              <li class="nav-item" style="margin-top: 15px;">
+                <a class="non_a nmc" href="{% url 'accounts:detail' user.username %}">{{ user.username }}님</a>
+              </li>
+              <li class="nav-item center">
+                <a class="p-2 position-relative non_a" href="{% url 'cart:detail' %}">
+                  장바구니
+                  <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill" style="background-color: #35c5f0;">
+                    {{cart.cartitem.len}}
+                    <span class="visually-hidden">unread message</span>
+                  </span>
+                </a>
+              </li>
+              <li class="nav-item" style="margin-top: 15px;">
+                  <a class="text-body text-decoration-none" href="{% url 'accounts:signout' %} ">
+                    <span class="nmc">로그아웃</span></a>
+                  </a>
+              </li>
+                <li class="nav-item dropdown" style="margin-top: 15px;">
+                  <a class="nav-link dropdown-toggle btn text-white" style="background-color:#35c5f0" type="button" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    글쓰기
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li>
+                      <a class="dropdown-item" href="{% url 'articles:create' %}">인테리어 후기</a>
+                    </li>
+                    <li>
+                      <a class="dropdown-item" href="#">상품 후기</a>
+                    </li>
+                  </ul>
+                </li>
+                {% else %}
+                <li class="nav-item" style="margin-top: 15px;">
+                  <a class="text-body text-decoration-none" href="{% url 'accounts:signin' %} ">
+                    <span class="nmc">로그인</span></a>
+                  </li>
+                <li class="nav-item" style="margin-top: 15px;">
+                  <a class="text-body text-decoration-none" href="{% url 'accounts:signup' %} ">
+                    <span class="nmc">회원가입</span></a>
+                </li>
+                <li class="nav-item" style="margin-top: 15px;">
+                  <span class="nmc">고객센터</span>
+                </li>
+                  <li class="nav-item dropdown"  style="margin-top: 15px;">
+                    <a class="nav-link dropdown-toggle btn text-white" style="background-color:#35c5f0" type="button" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      글쓰기
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li>
+                        <a class="dropdown-item" href="{% url 'articles:create' %}">인테리어 후기</a>
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="#">상품 후기</a>
+                      </li>
+                    </ul>
+                  </li>
+                  {% endif %}
+              </ul>
+            </div>
+          </div>
+        </nav>
 
       {% block content %}{% endblock %}
 
