--- a/templates/base.html
+++ b/templates/base.html
@@ -146,7 +146,7 @@
               <li class="nav-item" style="margin-top: 15px;">
                 <a class="non_a nmc" href="{% url 'accounts:detail' user.username %}">{{ user.username }}님</a>
               </li>
-              <li class="nav-item center">
+              <li class="nav-item center" style="margin-top: 15px;">
                 <a class="p-2 position-relative non_a" href="{% url 'cart:detail' %}">
                   장바구니
                   <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill" style="background-color: #35c5f0;">
