style : scroll bar, product detail

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,6 +24,18 @@ label:focus,
   box-shadow: none !important;
 }
 
+.box {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
+
+.box::-webkit-scrollbar {
+  display: none;
+  /* Chrome, Safari, Opera*/
+}
+
 .header {
   background-color: #ffffff;
   letter-spacing: -.4px;
