--- a/articles/templates/articles/index.html
+++ b/articles/templates/articles/index.html
@@ -5,28 +5,30 @@
 
 {% block content %}
 <div class="section-grid px-2 my-4">
-  <aside class="mt-3" style="overflow-y: scroll; height: calc(100vh - 60px);">
+  <aside class="box mt-3" style="overflow-y: scroll; height: calc(100vh - 60px);">
     <h2 class="mb-3 mx-3" style="font-size: 14px; color: #8b95a1">오늘 많이본 상품</h2>
     {% for product in products %}
-    <div class="card m-3" style="width:287px; border-radius: 15px; border: 0px;">
-      <div class="cart-head" style="width: 287px; height: 287px; border-radius: 15px 15px 0 0;">
-        <img src="{{product.product_image.url}}" class="card-img-top" alt="..."
-          style="object-fit:cover; width: 100%; height: 100%; border-radius: 15px 15px 0 0;">
+    <a class="non_a" href="{% url 'products:detail' product.id %}">
+      <div class="card m-3" style="width:287px; border-radius: 15px; border: 0px;">
+        <div class="cart-head" style="width: 287px; height: 287px; border-radius: 15px 15px 0 0;">
+          <img src="{{product.product_image.url}}" class="card-img-top" alt="..."
+            style="object-fit:cover; width: 100%; height: 100%; border-radius: 15px 15px 0 0;">
+        </div>
+        <div class="card-body">
+          <p class="m-0 text-muted" style="font-size: 14px;">{{ product.brand }}</p>
+          <h4 class="mb-1" style="font-size: 16px">{{ product.title }}</h4>
+          <p class="m-0" style="font-size: 18px; font-weight:700; color: #33c4f0;">
+            {{ product.price|intcomma }}원</p>
+          <p class="m-0" style="color: #33c4f0;">★
+            <span style="color: rgb(76, 76, 76)">{{ grade_avg.grade_avg__avg|floatformat }}</span>
+          </p>
+        </div>
       </div>
-      <div class="card-body">
-        <p class="m-0 text-muted" style="font-size: 14px;">{{ product.brand }}</p>
-        <h4 class="mb-1" style="font-size: 16px">{{ product.title }}</h4>
-        <p class="m-0" style="font-size: 18px; font-weight:700; color: #33c4f0;">
-          {{ product.price|intcomma }}원</p>
-        <p class="m-0" style="color: #33c4f0;">★
-          <span style="color: rgb(76, 76, 76)">{{ grade_avg.grade_avg__avg|floatformat }}</span>
-        </p>
-      </div>
-    </div>
+    </a>
     {% endfor %}
   </aside>
 
-  <section class="section-center mt-3" style="overflow-y: scroll; height: calc(100vh - 60px);">
+  <section class="box section-center mt-3" style="overflow-y: scroll; height: calc(100vh - 60px);">
     <h2 class="mb-3 mx-3" style="font-size: 14px; color: #8b95a1">인테리어 후기</h2>
     {% for article in articles %}
     <a class="non_a" href="{% url 'articles:detail' article.pk article.slug %}">
@@ -54,7 +56,7 @@
     </a>
     {% endfor %}
   </section>
-  <div>
+  <aside class="box" style="overflow-y: scroll; height: calc(100vh - 60px);">
     {% for article_hit in articles_hits %}
     <div class="mt-3" style=" width: 100%;">
       <div class="row m-2 p-3 d-flex justify-content-center" style="width:100%; background-color:white">
@@ -65,14 +67,10 @@
             </p>
           </div>
         </div>
-        >>>>>>> Stashed changes
       </div>
     </div>
-  </div>
-  {% endfor %}
-</div>
-</div>
+    {% endfor %}
+  </aside>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
 {% endblock %}
