--- a/templates/base.html
+++ b/templates/base.html
@@ -2,218 +2,227 @@
 <!doctype html>
 <html lang="en">
 
-  <head>
-    <title>모레의집</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <script src="https://kit.fontawesome.com/9dfbf66130.js" crossorigin="anonymous"></script>
-    <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.0.0/kakao.min.js" integrity="sha384-PFHeU/4gvSH8kpvhrigAPfZGBDPs372JceJq3jAXce11bVA6rMvGWzvP4fMQuBGL" crossorigin="anonymous"></script>
-    <script>
-      Kakao.init('03136f2726faff9cad61468b2f5c1270'); // 사용하려는 앱의 JavaScript 키 입력
-    </script>
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    {% block css %}
-      <link rel="stylesheet" href="{% static 'css/style.css' %}?{% now 'U'%}">
-    {% endblock css %}
+<head>
+  <title>모레의집</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <script src="https://kit.fontawesome.com/9dfbf66130.js" crossorigin="anonymous"></script>
+  <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.0.0/kakao.min.js"
+    integrity="sha384-PFHeU/4gvSH8kpvhrigAPfZGBDPs372JceJq3jAXce11bVA6rMvGWzvP4fMQuBGL"
+    crossorigin="anonymous"></script>
+  <script>
+    Kakao.init('03136f2726faff9cad61468b2f5c1270'); // 사용하려는 앱의 JavaScript 키 입력
+  </script>
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  {% block css %}
+  <link rel="stylesheet" href="{% static 'css/style.css' %}?{% now 'U'%}">
+  {% endblock css %}
 
-  </head>
+</head>
 
-  <body>
-    {% comment %} <nav>
-      <div class="header">
-        <div class="header_main">
-          <div class="nav_start">
-            <a class="main_logo" alt="오늘의집 로고" href="{% url 'articles:index' %}">
-              <img class="logo" src="{% static 'img/logo3.png' %}" alt="오늘의집 홈" width="100" height="30" viewbox="0 0 74 30">
-            </a>
-          </div>
-          <!-- <div class="nav_left"> -->
-          <div class="nav_main">
-            <a class="nav_main_content" style="text-decoration: none; color:black;" href="{% url 'products:detail' 1 %}">
-              <span class=" nmc">
+<body>
+  {% comment %} <nav>
+    <div class="header">
+      <div class="header_main">
+        <div class="nav_start">
+          <a class="main_logo" alt="오늘의집 로고" href="{% url 'articles:index' %}">
+            <img class="logo" src="{% static 'img/logo3.png' %}" alt="오늘의집 홈" width="100" height="30"
+              viewbox="0 0 74 30">
+          </a>
+        </div>
+        <!-- <div class="nav_left"> -->
+        <div class="nav_main">
+          <a class="nav_main_content" style="text-decoration: none; color:black;" href="{% url 'products:detail' 1 %}">
+            <span class=" nmc">
+              <b>상품후기</b>
+            </span>
+          </a>
+        </div>
+        <div class="nav_main">
+          <a clsss="nav_main_content" style="text-decoration: none; color:black;"
+            href="{% url 'articles:article_all' %}">
+            <span class=" nmc" href="/index.html">
+              <b>인테리어후기</b>
+            </span>
+          </a>
+        </div>
+
+        <!-- </div> -->
+        <div class="nav_search">
+          <form class="search_form" action="{% url 'articles:search' %}" method="GET">
+            <input class="header_input p-3" placeholder="통합검색" name="kw">
+            <input type="submit" style="display:none;">
+          </form>
+        </div>
+        {% if request.user.is_authenticated %}
+        <div>
+          <a class="non_a nmc" href="{% url 'accounts:detail' user.username %}">{{ user.username }}님</a>
+        </div>
+
+        <a class="p-2 position-relative non_a" href="{% url 'cart:detail' %}">
+          장바구니
+        </a>
+        <div>
+          <a class="text-body text-decoration-none" href="{% url 'accounts:signout' %} ">
+            <span class="nmc">로그아웃</span></a>
+        </div>
+        <!-- 후기 -->
+        <div class="dropdown">
+          <button class="btn btn dropdown-toggle text-white" style="background-color:#35c5f0" type="button"
+            data-bs-toggle="dropdown" aria-expanded="false">
+            글쓰기
+          </button>
+          <ul class=" dropdown-menu" aria-labelledby="dropdownMenuButton1">
+            <li>
+              <a class="dropdown-item" href="{% url 'articles:create' %}">인테리어 후기</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="#">상품 후기</a>
+            </li>
+          </ul>
+        </div>
+        {% else %}
+        <div>
+          <a class="text-body text-decoration-none" href="{% url 'accounts:signin' %} ">
+            <span class="nmc">로그인</span></a>
+        </div>
+        <div>
+          <a class="text-body text-decoration-none" href="{% url 'accounts:signup' %} ">
+            <span class="nmc">회원가입</span></a>
+        </div>
+        <div>
+          <span class="nmc">고객센터</span>
+        </div>
+        <div class="dropdown">
+          <button class="btn btn dropdown-toggle text-white" style="background-color:#35c5f0" type="button"
+            data-bs-toggle="dropdown" aria-expanded="false">
+            글쓰기
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+            <li>
+              <a class="dropdown-item" href="{% url 'articles:create' %}">인테리어 후기</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="{% url 'products:reviews_create' 1%}">상품 후기</a>
+            </li>
+          </ul>
+        </div>
+        {% endif %}
+      </div>
+  </nav> {% endcomment %}
+
+  <nav class="navbar navbar-expand-lg">
+    <div class="container header_main">
+      <a class="main_logo" alt="오늘의집 로고" href="{% url 'articles:index' %}">
+        <img class="logo" src="{% static 'img/logo3.png' %}" alt="오늘의집 홈" width="100" height="30" viewbox="0 0 74 30">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item" style="margin-top: 15px;">
+            <a class="nav_main_content" style="text-decoration: none; color:black; margin-top: 15px;"
+              href="{% url 'products:detail' 1 %}">
+              <span class="nmc">
                 <b>상품후기</b>
               </span>
             </a>
-          </div>
-          <div class="nav_main">
-            <a clsss="nav_main_content" style="text-decoration: none; color:black;" href="{% url 'articles:article_all' %}">
-              <span class=" nmc" href="/index.html">
+          </li>
+          <li class="nav-item" style="margin-top: 15px;">
+            <a class="nav_main_content" style="text-decoration: none; color:black; margin-top: 15px;"
+              href="{% url 'articles:article_all' %}">
+              <span class="nmc" href="/index.html">
                 <b>인테리어후기</b>
               </span>
             </a>
-          </div>
-
-          <!-- </div> -->
-          <div class="nav_search">
-            <form class="search_form" action="{% url 'articles:search' %}" method="GET">
-              <input class="header_input p-3" placeholder="통합검색" name="kw">
-              <input type="submit" style="display:none;">
-            </form>
-          </div>
-          {% if request.user.is_authenticated %}
-            <div>
-              <a class="non_a nmc" href="{% url 'accounts:detail' user.username %}">{{ user.username }}님</a>
+          </li>
+          <li class="nav-item center" style="margin-top: 7px;">
+            <div class="nav_search">
+              <form class="search_form" action="{% url 'articles:search' %}" method="GET">
+                <input class="header_input p-3" placeholder="통합검색" name="kw">
+                <input type="submit" style="display:none;">
+              </form>
             </div>
-
+          </li>
+          {% if request.user.is_authenticated %}
+          <li class="nav-item" style="margin-top: 15px;">
+            <a class="non_a nmc" href="{% url 'accounts:detail' user.username %}">{{ user.username }}님</a>
+          </li>
+          <li class="nav-item center" style="margin-top: 15px;">
             <a class="p-2 position-relative non_a" href="{% url 'cart:detail' %}">
               장바구니
-              <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill" style="background-color: #35c5f0;">
-                {{cart.cartitem.len}}
-                <span class="visually-hidden">unread message</span>
-              </span>
             </a>
-            <div>
-              <a class="text-body text-decoration-none" href="{% url 'accounts:signout' %} ">
-                <span class="nmc">로그아웃</span></a>
-            </div>
-            <!-- 후기 -->
-            <div class="dropdown">
-              <button class="btn btn dropdown-toggle text-white" style="background-color:#35c5f0" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                글쓰기
-              </button>
-              <ul class=" dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                <li>
-                  <a class="dropdown-item" href="{% url 'articles:create' %}">인테리어 후기</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="#">상품 후기</a>
-                </li>
-              </ul>
-            </div>
+          </li>
+          <li class="nav-item" style="margin-top: 15px;">
+            <a class="text-body text-decoration-none" href="{% url 'accounts:signout' %} ">
+              <span class="nmc">로그아웃</span></a>
+            </a>
+          </li>
+          <li class="nav-item dropdown" style="margin-top: 15px;">
+            <a class="nav-link dropdown-toggle btn text-white" style="background-color:#35c5f0" type="button" href="#"
+              role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              글쓰기
+            </a>
+            <ul class="dropdown-menu">
+              <li>
+                <a class="dropdown-item" href="{% url 'articles:create' %}">인테리어 후기</a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="#">상품 후기</a>
+              </li>
+            </ul>
+          </li>
           {% else %}
-            <div>
-              <a class="text-body text-decoration-none" href="{% url 'accounts:signin' %} ">
-                <span class="nmc">로그인</span></a>
-            </div>
-            <div>
-              <a class="text-body text-decoration-none" href="{% url 'accounts:signup' %} ">
-                <span class="nmc">회원가입</span></a>
-            </div>
-            <div>
-              <span class="nmc">고객센터</span></div>
-            <div class="dropdown">
-              <button class="btn btn dropdown-toggle text-white" style="background-color:#35c5f0" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                글쓰기
-              </button>
-              <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                <li>
-                  <a class="dropdown-item" href="{% url 'articles:create' %}">인테리어 후기</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="{% url 'products:reviews_create' 1%}">상품 후기</a>
-                </li>
-              </ul>
-            </div>
+          <li class="nav-item" style="margin-top: 15px;">
+            <a class="text-body text-decoration-none" href="{% url 'accounts:signin' %} ">
+              <span class="nmc">로그인</span></a>
+          </li>
+          <li class="nav-item" style="margin-top: 15px;">
+            <a class="text-body text-decoration-none" href="{% url 'accounts:signup' %} ">
+              <span class="nmc">회원가입</span></a>
+          </li>
+          <li class="nav-item" style="margin-top: 15px;">
+            <span class="nmc">고객센터</span>
+          </li>
+          <li class="nav-item dropdown" style="margin-top: 15px;">
+            <a class="nav-link dropdown-toggle btn text-white" style="background-color:#35c5f0" type="button" href="#"
+              role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              글쓰기
+            </a>
+            <ul class="dropdown-menu">
+              <li>
+                <a class="dropdown-item" href="{% url 'articles:create' %}">인테리어 후기</a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="#">상품 후기</a>
+              </li>
+            </ul>
+          </li>
           {% endif %}
-        </div>
-      </nav> {% endcomment %}
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-      <nav class="navbar navbar-expand-lg">
-        <div class="container header_main">
-          <a class="main_logo" alt="오늘의집 로고" href="{% url 'articles:index' %}">
-            <img class="logo" src="{% static 'img/logo3.png' %}" alt="오늘의집 홈" width="100" height="30" viewbox="0 0 74 30">
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item"  style="margin-top: 15px;">
-                <a class="nav_main_content" style="text-decoration: none; color:black; margin-top: 15px;" href="{% url 'products:detail' 1 %}">
-                  <span class="nmc">
-                    <b>상품후기</b>
-                  </span>
-                </a>
-              </li>
-              <li class="nav-item" style="margin-top: 15px;">
-                <a class="nav_main_content" style="text-decoration: none; color:black; margin-top: 15px;" href="{% url 'articles:article_all' %}">
-                  <span class="nmc" href="/index.html">
-                    <b>인테리어후기</b>
-                  </span>
-                </a>
-              </li>
-              <li class="nav-item center"  style="margin-top: 7px;">
-                <div class="nav_search">
-                  <form class="search_form" action="{% url 'articles:search' %}" method="GET">
-                    <input class="header_input p-3" placeholder="통합검색" name="kw">
-                    <input type="submit" style="display:none;">
-                  </form>
-                </div>
-              </li>
-              {% if request.user.is_authenticated %}
-              <li class="nav-item" style="margin-top: 15px;">
-                <a class="non_a nmc" href="{% url 'accounts:detail' user.username %}">{{ user.username }}님</a>
-              </li>
-              <li class="nav-item center" style="margin-top: 15px;">
-                <a class="p-2 position-relative non_a" href="{% url 'cart:detail' %}">
-                  장바구니
-                  <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill" style="background-color: #35c5f0;">
-                    {{cart.cartitem.len}}
-                    <span class="visually-hidden">unread message</span>
-                  </span>
-                </a>
-              </li>
-              <li class="nav-item" style="margin-top: 15px;">
-                  <a class="text-body text-decoration-none" href="{% url 'accounts:signout' %} ">
-                    <span class="nmc">로그아웃</span></a>
-                  </a>
-              </li>
-                <li class="nav-item dropdown" style="margin-top: 15px;">
-                  <a class="nav-link dropdown-toggle btn text-white" style="background-color:#35c5f0" type="button" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    글쓰기
-                  </a>
-                  <ul class="dropdown-menu">
-                    <li>
-                      <a class="dropdown-item" href="{% url 'articles:create' %}">인테리어 후기</a>
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="#">상품 후기</a>
-                    </li>
-                  </ul>
-                </li>
-                {% else %}
-                <li class="nav-item" style="margin-top: 15px;">
-                  <a class="text-body text-decoration-none" href="{% url 'accounts:signin' %} ">
-                    <span class="nmc">로그인</span></a>
-                  </li>
-                <li class="nav-item" style="margin-top: 15px;">
-                  <a class="text-body text-decoration-none" href="{% url 'accounts:signup' %} ">
-                    <span class="nmc">회원가입</span></a>
-                </li>
-                <li class="nav-item" style="margin-top: 15px;">
-                  <span class="nmc">고객센터</span>
-                </li>
-                  <li class="nav-item dropdown"  style="margin-top: 15px;">
-                    <a class="nav-link dropdown-toggle btn text-white" style="background-color:#35c5f0" type="button" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      글쓰기
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li>
-                        <a class="dropdown-item" href="{% url 'articles:create' %}">인테리어 후기</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="#">상품 후기</a>
-                      </li>
-                    </ul>
-                  </li>
-                  {% endif %}
-              </ul>
-            </div>
-          </div>
-        </nav>
+  {% block content %}{% endblock %}
 
-      {% block content %}{% endblock %}
+  <footer>
+    <!-- place footer here -->
+  </footer>
+  <!-- Bootstrap JavaScript Libraries -->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+    crossorigin="anonymous"></script>
 
-      <footer>
-        <!-- place footer here -->
-      </footer>
-      <!-- Bootstrap JavaScript Libraries -->
-      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
+    integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
+    crossorigin="anonymous"></script>
 
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
+</body>
 
-    </body>
-
-  </html>
+</html>
