--- a/articles/templates/articles/index.html
+++ b/articles/templates/articles/index.html
@@ -65,10 +65,11 @@
       <div class="mt-3" style=" width: 100%;">
         <div class="row m-2 p-3 d-flex justify-content-center" style="width:100%; background-color:white">
           <div class="card m-2 p-0 col-lg-8" style="height: 150px; border: 0px">
-            <img class="contentcard" style="height: 100%; border-radius: 15px;" src="{{ article_hit.image.url }}"
-              class="card-img-top" alt="...">
+            <img class="contentcard" style="height: 100%; border-radius: 15px;"
+              src="https://blog.kakaocdn.net/dn/rxanS/btqEsEjUpAW/DghnkWtTGo7mVEiSo2yiq0/img.jpg" class="card-img-top"
+              alt="...">
             <div class="card-body">
-              <p class="card-text" style="font-weight: 700;">{{article_hit.title}}
+              <p class="txt_line card-text" style="font-weight: 700;">{{article_hit.title}}
               </p>
             </div>
           </div>
