--- a/articles/templates/articles/index.html
+++ b/articles/templates/articles/index.html
@@ -68,12 +68,12 @@
           {% if article_hit.image %}
           <!-- title -->
           <div class="user-image mx-4 py-3">
-            <img class="contentcard" style="height: 250px; width:100%; border-radius: 15px; object-fit: cover;"
+            <img class="contentcard" style="height: 200px; width:278px; border-radius: 15px; object-fit: cover;"
               src="{{ article_hit.image.url }}" alt="">
           </div>
           {% else %}
           <div class="contentcard d-flex align-items-center justify-content-center mx-4 mb-3"
-            style="background-color: rgb(35, 35, 35);width: 100%; height: 200px; border-radius: 15px;">
+            style="background-color: rgb(35, 35, 35);width: 278px; height: 200px; border-radius: 15px;">
             <p class="non_a text-white" style="font-weight: 200;">이미지가 없습니다.</p>
           </div>
           {% endif %}
