feat : hober style

--- a/products/templates/products/index.html
+++ b/products/templates/products/index.html
@@ -9,7 +9,7 @@
       <h2 class="mb-5 mx-3" style="font-size: 14px; color: #8b95a1">상품목록</h2>
     </div>
     {% for product in products %}
-    <div>
+    <div class="contentcard">
       <a class="non_a" href="{% url 'products:detail' product.id %}">
         <div class="card m-3" style="width:287px; border-radius: 15px; border: 0px;">
           <div class="cart-head" style="width: 287px; height: 287px; border-radius: 15px 15px 0 0;">
