--- a/static/css/style.css
+++ b/static/css/style.css
@@ -56,7 +56,7 @@ label:focus,
 
 .header {
   background-color: #ffffff;
-  letter-spacing: -.4px;
+  letter-spacing: -0.4px;
 }
 
 .header_main {
@@ -106,7 +106,7 @@ label:focus,
   width: 100%;
   margin: 10px auto;
   position: relative;
-  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)),
+  /* background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)); */
 }
 
 .user-wrap img {
@@ -119,7 +119,7 @@ label:focus,
   bottom: -5px;
   width: 100%;
   font: size 36px;
-  font-family: 'card';
+  font-family: "card";
 }
 
 /* star-rating */
@@ -135,7 +135,7 @@ label:focus,
 }
 
 .star-ratings-fill {
-  color: #82E0FA;
+  color: #82e0fa;
   padding: 0;
   position: absolute;
   z-index: 1;
@@ -143,7 +143,7 @@ label:focus,
   top: 0;
   left: 0;
   overflow: hidden;
-  -webkit-text-fill-color: #35C5F0;
+  -webkit-text-fill-color: #35c5f0;
 }
 
 .star-ratings-base {
@@ -176,13 +176,13 @@ label:focus,
   cursor: pointer;
 }
 
-.star-rating :checked~label {
-  -webkit-text-fill-color: #35C5F0;
+.star-rating :checked ~ label {
+  -webkit-text-fill-color: #35c5f0;
 }
 
 .star-rating label:hover,
-.star-rating label:hover~label {
-  -webkit-text-fill-color: #82E0FA;
+.star-rating label:hover ~ label {
+  -webkit-text-fill-color: #82e0fa;
 }
 
 /* article detail */
@@ -209,6 +209,54 @@ label:focus,
 .contentcard:hover {
   border-radius: 15px;
   transform: translateY(-10px);
-  transition: all ease-in-out .3s;
+  transition: all ease-in-out 0.3s;
   box-shadow: 4px 12px 30px 6px rgb(0 0 0 / 9%);
+}
+
+/* nav */
+.right-nav {
+  display: flex;
+  align-items: center;
+}
+
+@media (max-width: 992px) {
+  .right-nav {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+  }
+  .right-nav > li {
+    margin: 10px 0;
+    padding: auto;
+  }
+}
+
+.article_a {
+  margin: 0;
+  padding: 0;
+}
+
+.article_sub {
+  display: flex;
+  flex-direction: column;
+}
+
+.article_sub > a {
+  text-decoration: none;
+  color: #34c5f0;
+  font-weight: 700;
+  padding: 10px 10px;
+}
+
+.article_sub > a:hover {
+  text-decoration: none;
+  color: #a0a0a0;
+  padding: 15px 10px;
+}
+
+.article_sub > p {
+  margin: 0;
+  padding: 0 10px;
+  font-size: small;
+  -webkit-text-size-adjust: auto;
 }
